2001-10-03  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* Makefile.in: remove generated files on make distclean

	* acinclude.m4: update from source
 
2001-10-02  Philippe Elie  <ph_e@club-internet.fr>

	* pp/oprofpp.cpp: fix a silly bug in do_list_symbols (oprofpp -l)

2001-10-02  John Levon  <moz@compsoc.man.ac.uk>

	* doc/oprofile.sgml: fix

	* Makefile.in: dist fix
 
2001-10-02  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* configure.in: -> 0.0.5 for release
 
2001-10-01  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_container.cpp:
	* pp/opf_filter.h: comment
	* pp/opf_filter.cpp: speed-up

2001-09-30  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_container.cpp:
	* pp/opf_filter.cpp:
	* pp/oprofpp.cpp:
	* pp/oprofpp.h: cleanup

2001-09-30  Philippe Elie  <ph_e@club-internet.fr>

	* gui/oprof_start.cpp:
	* gui/oprof_start.h:
	* gui/ui/oprof_start.base.ui: cleanup

2001-09-29  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_filter.cpp: check if we need debug info to work.

	* gui/oprof_start.cpp: use one config file by counter. Store
	  selected counter in oprof_start_config

	* gui/oprof_start.cpp:
	* gui/persistent_config.h: remove dirty flag in 
	  persistent_config_t template class

2001-09-29  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update
 
	* gui/oprof_start.cpp:
	* gui/ui/oprof_start_base.ui:
	* gui/oprof_start_config.h:
	* gui/oprof_start_config.cpp: add verbose option
 
	* pp/opf_container.cpp:
	* pp/opf_filter.cpp: some FIXMEs and little cleanups
 
2001-09-29  Philippe Elie  <ph_e@club-internet.fr>

	* pp/oprofpp.cpp: bug fix when calling the bfd lib.

2001-09-29  Philippe Elie  <ph_e@club-internet.fr>

	* gui/oprof_start.cpp: two minor fixes.

2001-09-28  John Levon  <moz@compsoc.man.ac.uk>

	* various files: the footer is now a header !

	* dae/opd_start.c: fix msync !!

	* gui/oprof_start.cpp:
	* gui/oprof_start_util.h:
	* gui/oprof_start_util.cpp: better default event count