@@ -1,3 +1,9 @@
+2001-10-03  Philippe Elie  <ph_e@club-internet.fr>
+
+	* pp/oprofpp.cpp
+	* pp/oprofpp.h
+	* pp/opf_filter.cpp: minor cleanup
+
 2001-10-03  John Levon  <moz@compsoc.man.ac.uk>
 
 	* TODO: update
